# grok-chat-bridge

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: build-demo-assets.yml  decode-demo-assets.yml
demo-assets/: architecture-diagram.jpg.b64.parts  chat-terminal-demo.jpg.b64.parts  demo-architecture-flow.mp4.b64.parts  demo-chat-terminal.mp4.b64.parts  hero-banner.jpg.b64.parts
grok_chat_bridge/: __init__.py  __main__.py  session_manager.py
grok_chat_bridge/acp/: __init__.py  client.py
scripts/: build_demo_assets.py  build_demo_assets.py.gz.b64  decode_demo_assets.sh  smoke_test_acp.py
