[project]
name = "grok-chat-bridge"
version = "0.1.0"
description = "Telegram, Discord, and WhatsApp bots backed by grok via ACP (stdio)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
whatsapp = ["httpx>=0.27"]
all = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "httpx>=0.27",
]
dev = ["pytest>=8.0"]

[project.scripts]
grok-chat-bridge = "grok_chat_bridge.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["grok_chat_bridge*"]
